// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sketch renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-sketch sketch-picker"
    style="width: 200px; padding: 10px 10px 0px; box-sizing: initial; background: rgb(255, 255, 255); -webkit-border-radius: 4px; border-radius: 4px; -webkit-box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15); box-shadow: 0 0 0 1px rgba(0,0,0,.15), 0 8px 16px rgba(0,0,0,.15);"
  >
    <div
      style="width: 100%; padding-bottom: 75%; position: relative; overflow: hidden;"
    >
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: rgb(43, 0, 255);"
      >
        <div
          class="saturation-white"
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: linear-gradient(to right, rgb(255, 255, 255), rgba(255, 255, 255, 0));"
        >
          <div
            class="saturation-black"
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0));"
          />
          <div
            style="position: absolute; top: 70%; left: 66.66666666666667%; cursor: default;"
          >
            <div
              style="width: 4px; height: 4px; -webkit-box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4); box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3),
            0 0 1px 2px rgba(0,0,0,.4); -webkit-border-radius: 50%; border-radius: 50%; -webkit-transform: translate(-2px, -2px); transform: translate(-2px, -2px);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="flexbox-fix"
      style="display: flex;"
    >
      <div
        style="padding: 4px 0px; flex: 1 1 0%;"
      >
        <div
          style="position: relative; height: 10px; overflow: hidden;"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          >
            <div
              class="hue-horizontal"
              style="padding: 0px 2px; position: relative; height: 100%; background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
            >
              <div
                style="position: absolute; left: 69.44444444444443%;"
              >
                <div
                  style="margin-top: 1px; width: 4px; -webkit-border-radius: 1px; border-radius: 1px; height: 8px; -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, .6); box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255); -webkit-transform: translateX(-2px); transform: translateX(-2px);"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          style="position: relative; height: 10px; margin-top: 4px; overflow: hidden;"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          >
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; overflow: hidden;"
            >
              <div
                style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
              />
            </div>
            <div
              style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: linear-gradient(to right, rgba(34, 25, 77, 0) 0%, rgb(34, 25, 77) 100%);"
            />
            <div
              style="position: relative; height: 100%; margin: 0px 3px;"
            >
              <div
                style="position: absolute; left: 100%;"
              >
                <div
                  style="width: 4px; -webkit-border-radius: 1px; border-radius: 1px; height: 8px; -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, .6); box-shadow: 0 0 2px rgba(0, 0, 0, .6); background: rgb(255, 255, 255); margin-top: 1px; -webkit-transform: translateX(-2px); transform: translateX(-2px);"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="width: 24px; height: 24px; position: relative; margin-top: 4px; margin-left: 4px; -webkit-border-radius: 3px; border-radius: 3px;"
      >
        <div
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: url("null");"
        />
        <div
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 2px; border-radius: 2px; background: rgb(34, 25, 77); -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15), inset 0 0 4px rgba(0,0,0,.25);"
        />
      </div>
    </div>
    <div
      class="flexbox-fix"
      style="display: flex; padding-top: 4px;"
    >
      <div
        style="flex: 2 1 0%;"
      >
        <div
          style="position: relative;"
        >
          <input
            id="rc-editable-input-1"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="22194D"
          />
          <label
            for="rc-editable-input-1"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
          >
            hex
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          style="position: relative;"
        >
          <input
            id="rc-editable-input-2"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="34"
          />
          <label
            for="rc-editable-input-2"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
          >
            r
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          style="position: relative;"
        >
          <input
            id="rc-editable-input-3"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="25"
          />
          <label
            for="rc-editable-input-3"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
          >
            g
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          style="position: relative;"
        >
          <input
            id="rc-editable-input-4"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="77"
          />
          <label
            for="rc-editable-input-4"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
          >
            b
          </label>
        </div>
      </div>
      <div
        style="flex: 1 1 0%; padding-left: 6px;"
      >
        <div
          style="position: relative;"
        >
          <input
            id="rc-editable-input-5"
            spellcheck="false"
            style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
            value="100"
          />
          <label
            for="rc-editable-input-5"
            style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
          >
            a
          </label>
        </div>
      </div>
    </div>
    <div
      class="flexbox-fix"
      style="margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid rgb(238, 238, 238); display: flex; flex-wrap: wrap; position: relative;"
    >
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(208, 2, 27); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#D0021B"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(245, 166, 35); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#F5A623"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(248, 231, 28); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#F8E71C"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(139, 87, 42); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#8B572A"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(126, 211, 33); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#7ED321"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(65, 117, 5); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#417505"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(189, 16, 224); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#BD10E0"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(144, 19, 254); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#9013FE"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(74, 144, 226); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#4A90E2"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(80, 227, 194); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#50E3C2"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(184, 233, 134); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#B8E986"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(0, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#000000"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(74, 74, 74); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#4A4A4A"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(155, 155, 155); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#9B9B9B"
          />
        </span>
      </div>
      <div
        style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
      >
        <span>
          <div
            style="background: rgb(255, 255, 255); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
            tabindex="0"
            title="#FFFFFF"
          />
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SketchFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="display: flex; padding-top: 4px;"
  >
    <div
      style="flex: 2 1 0%;"
    >
      <div
        style="position: relative;"
      >
        <input
          id="rc-editable-input-26"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="FF0000"
        />
        <label
          for="rc-editable-input-26"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize;"
        >
          hex
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        style="position: relative;"
      >
        <input
          id="rc-editable-input-27"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="255"
        />
        <label
          for="rc-editable-input-27"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
        >
          r
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        style="position: relative;"
      >
        <input
          id="rc-editable-input-28"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="0"
        />
        <label
          for="rc-editable-input-28"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
        >
          g
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        style="position: relative;"
      >
        <input
          id="rc-editable-input-29"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="0"
        />
        <label
          for="rc-editable-input-29"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
        >
          b
        </label>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; padding-left: 6px;"
    >
      <div
        style="position: relative;"
      >
        <input
          id="rc-editable-input-30"
          spellcheck="false"
          style="width: 80%; padding: 4px 10% 3px; border: medium; -webkit-box-shadow: inset 0 0 0 1px #ccc; box-shadow: inset 0 0 0 1px #ccc; font-size: 11px;"
          value="100"
        />
        <label
          for="rc-editable-input-30"
          style="display: block; text-align: center; font-size: 11px; color: rgb(34, 34, 34); padding-top: 3px; padding-bottom: 4px; text-transform: capitalize; cursor: ew-resize;"
        >
          a
        </label>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SketchPresetColors renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid rgb(238, 238, 238); display: flex; flex-wrap: wrap; position: relative;"
  >
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          style="background: rgb(255, 255, 255); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#fff"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          style="background: rgb(153, 153, 153); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#999"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          style="background: rgb(0, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#000"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SketchPresetColors with custom titles renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="margin: 0px -10px; padding: 10px 0px 0px 10px; border-top: 1px solid rgb(238, 238, 238); display: flex; flex-wrap: wrap; position: relative;"
  >
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          style="background: rgb(255, 255, 255); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="white"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          style="background: rgb(153, 153, 153); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="gray"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          style="background: rgb(0, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#000"
        />
      </span>
    </div>
    <div
      style="width: 16px; height: 16px; margin: 0px 10px 10px 0px;"
    >
      <span>
        <div
          style="background: rgb(255, 0, 0); height: 100%; width: 100%; cursor: pointer; position: relative; outline: none; -webkit-border-radius: 3px; border-radius: 3px; -webkit-box-shadow: inset 0 0 0 1px rgba(0,0,0,.15); box-shadow: inset 0 0 0 1px rgba(0,0,0,.15);"
          tabindex="0"
          title="#f00"
        />
      </span>
    </div>
  </div>
</DocumentFragment>
`;
